--- a/jogo9.html
+++ b/jogo9.html
@@ -126,9 +126,9 @@
     <button class="voltar">
       <a href="./jogo8.html">Voltar</a>
   </button>
-    <!-- <button class="avancar">
+    <button class="avancar">
       <a href="./jogo10.html">Avançar</a>
-  </button> -->
+  </button>
   </div>
   <script src="./script.js"></script>
 
