--- a/jogo10.html
+++ b/jogo10.html
@@ -167,10 +167,12 @@
             mude (-5) no tamanho
             espere (0.1) segundos
         fim
+    fim
 
 
     quando eu receber [esconda]
         esconda
+    fim
 
 
     quando eu receber [início]
@@ -186,6 +188,7 @@
                 fim
             fim
         fim
+    fim
 
 
     quando eu receber [verificar respostas]
@@ -204,6 +207,7 @@
                 adicione (1) a <span style="color:red">[p2]</span>
             fim
         fim
+    fim
 </pre>
 
 
