--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <div class="bt">
+  <div class="btt">
+    <button class="avancar">💰 15</button>
     <button class="avancar" onclick="toggleDarkMode()">👓</button>
   </div>
 
