--- a/jogo4.html
+++ b/jogo4.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="btt">
+    <button class="avancar">💰 15</button>
         <button class="avancar" onclick="toggleDarkMode()">👓</button>
       </div>
   <h1 class="tit">📘 Documentação do Projeto - Space Invaders</h1>
@@ -29,8 +30,8 @@ adicione (-50) a y
 repita (7) vezes
     mova (-61) passos
     crie clone de [este ator]
-adicione (-50) a y
 fim
+adicione (-50) a y
 repita (5) vezes
     mova (62) passos
     crie clone de [este ator]
