--- a/jogo6.html
+++ b/jogo6.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="btt">
+    <button class="avancar">💰 15</button>
         <button class="avancar" onclick="toggleDarkMode()">👓</button>
       </div>
   <h1 class="tit">📘 Documentação do Projeto - Snake</h1>
@@ -25,15 +26,12 @@ sempre
     se &lt;tecla [seta para cima] pressionada?&gt; então
         aponte para a direção (0)
     fim
-fim
     se &lt;tecla [seta para baixo] pressionada?&gt; então
         aponte para a direção (180)
     fim
-fim
     se &lt;tecla [seta para direita] pressionada?&gt; então
         aponte para a direção (90)
     fim
-fim
     se &lt;tecla [seta para esquerda] pressionada?&gt; então
         aponte para a direção (-90)
     fim
