--- a/jogo10.html
+++ b/jogo10.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="btt">
+    <button class="avancar">💰 15</button>
     <button class="avancar" onclick="toggleDarkMode()">👓</button>
   </div>
 
