--- a/jogo9.html
+++ b/jogo9.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="btt">
+    <button class="avancar">💰 15</button>
     <button class="avancar" onclick="toggleDarkMode()">👓</button>
   </div>
   <h1 class="tit">📘 Documentação do Projeto - Clippy</h1>
