--- a/jogo5.html
+++ b/jogo5.html
@@ -65,9 +65,9 @@ sempre
     fim  
     se &lt;tecla [seta para baixo] pressionada?&gt; então
         aponte para a direção (180)
-        adicione (-5) a x
+        adicione (-5) a y
         se &lt;tocando na cor [preta]?&gt; então
-            adicione (5) a x
+            adicione (5) a y
         fim
     fim
 fim
