v5 correções de variáveis

--- a/jogo3.html
+++ b/jogo3.html
@@ -47,6 +47,7 @@ fim
 
   <div class="bloco">
     <h2>🧩 Programação da Fruta</h2>
+    <p class="explicacao">👉 [pontos] é uma variável.</p>
     <pre>
 quando [bandeira verde] for clicado
 mude [pontos] para (0)
