--- a/jogo6.html
+++ b/jogo6.html
@@ -18,6 +18,8 @@
   </div>
   <div class="bloco">
     <h2>🐍 Personagem - Snake</h2>
+<p class="explicacao">👉 [pontos] e [tamanho] são variáveis.</p>
+   
     <pre>
 quando [bandeira verde] for clicado
 vá para x: (-180) y: (21)
