--- a/jogo7.html
+++ b/jogo7.html
@@ -160,10 +160,11 @@
       quando [bandeira verde] for clicado
       mostre
       vá para x: -208 y: 81
-      repita (9) vezes
+      repita (10) vezes
         crie clone de [este ator]
         adicione (46) a x
       fim
+      esconda
 
 
       quando eu começar como um clone
