--- a/jogo10.html
+++ b/jogo10.html
@@ -299,9 +299,9 @@
     <button class="voltar">
       <a href="./jogo9.html">Voltar</a>
   </button>
-    <!-- <button class="avancar">
+    <button class="avancar">
       <a href="./jogo11.html">Avançar</a>
-  </button> -->
+  </button>
   </div>
   <script src="./script.js"></script>
 
