--- a/jogo11.html
+++ b/jogo11.html
@@ -134,11 +134,9 @@ Depois, espera <strong>4 segundos</strong> antes de repetir o ciclo.</p>
 <img src="./img/jogo11 pokedex/Jogo3.png" alt="">
 
 <h3>🔍 Explicação detalhada (Parte 2/2)</h3>
-<p class="explicacao">👉 <strong>Quando receber "pergunta":</strong> o personagem escolhe um Pokémon aleatório da <strong>ListaPokemon</strong> e muda sua fantasia para esse Pokémon.</p>
-<p class="explicacao">👉 O personagem aparece na tela, ajusta o tamanho e pergunta: <strong>"Qual é esse Pokémon?"</strong>.</p>
-<p class="explicacao">👉 Se a <strong>resposta estiver correta</strong>, o personagem diz "Acertou!!!", faz um efeito de brilho, espera 3 segundos e envia novamente a mensagem <strong>"pergunta"</strong> para repetir o jogo.</p>
-<p class="explicacao">👉 Se a <strong>resposta estiver errada</strong>, o personagem diz "Errou!!!", depois mostra a mensagem <strong>"É o [nome do Pokémon]"</strong>, faz o mesmo efeito de brilho, espera 3 segundos e também transmite <strong>"pergunta"</strong> para continuar.</p>
-
+<p class="explicacao">👉 <strong>Se a resposta estiver errada:</strong> o personagem diz "Errou!!!" por 3 segundos.</p>
+<p class="explicacao">👉 Em seguida, mostra a mensagem <strong>"É o [nome do Pokémon]"</strong>, revelando a resposta correta.</p>
+<p class="explicacao">👉 Depois repete 10 vezes o efeito de brilho para destacar o Pokémon, espera 3 segundos e transmite novamente <strong>"pergunta"</strong> para iniciar uma nova rodada.</p>
 
 <h2>Cenário</h2>
 <img src="./img/jogo11 pokedex/Palco.png" alt="">
